--- a/index.html
+++ b/index.html
@@ -9,36 +9,28 @@
 <body>
     <script>
         function computerPlay() {
-            let play = ["Rock", "Paper", "Scissors"];
+            let play = ["rock", "paper", "scissors"];
             return play[Math.floor(Math.random() * play.length)];
         }
 
         function playRound(playerSelection, computerSelection) {
-                if (playerSelection.toLowerCase() == "rock" && computerSelection == "Rock") {
-                    return "tie";
-                } else if (playerSelection.toLowerCase() == "paper" && computerSelection == "Rock") {
-                    return "you win!";
-                } else if (playerSelection.toLowerCase() == "scissor" && computerSelection == "Rock") {
-                    return "you lose";
-                } else if (playerSelection.toLowerCase() == "rock" && computerSelection == "Paper") {
-                    return "you lose";
-                } else if (playerSelection.toLowerCase() == "paper" && computerSelection == "Paper") {
-                    return "tie";
-                } else if (playerSelection.toLowerCase() == "scissor" && computerSelection == "Paper") {
-                    return "you win!";
-                } else if (playerSelection.toLowerCase() == "rock" && computerSelection == "Scissors") {
-                    return "you win!";
-                } else if (playerSelection.toLowerCase() == "paper" && computerSelection == "Scissors") {
-                    return "you lose";
-                } else {
-                    return "tie";
-                }                  
+            if (playerSelection.toLowerCase() == computerSelection) {
+                return "tie";
+            }
+            else if ( (playerSelection.toLowerCase() == "rock" && computerSelection == "scissors") || (playerSelection.toLowerCase() == "paper" && computerSelection == "rock") || (playerSelection.toLowerCase() == "scissors" && computerSelection == "paper") ) {
+                return "you win";
+            }
+            else {
+                return "you lose";
+            }
         }
 
         const playerSelection = "Rock";
         let computerSelection = computerPlay();
-        // console.log(computerSelection); 
-        // console.log(playRound(playerSelection, computerSelection)); 
+
+
+        console.log(computerSelection); 
+        console.log(playRound(playerSelection, computerSelection)); 
 
         // function game() {
         //     for (let i = 0; i < 5; i++) {
