cleaned up code and more comments

--- a/index.html
+++ b/index.html
@@ -8,63 +8,13 @@
 </head>
 <body>
     <script>
-        // // computer randomizes a shape
-        // function computerPlay() {
-        //     let play = ["rock", "paper", "scissors"];
-        //     return play[Math.floor(Math.random() * play.length)];
-        // }
-
-        // // determination of winner
-        // function playRound(playerSelection, computerSelection) {
-        //     if (playerSelection.toLowerCase() == computerSelection) {
-        //         return "tie";
-        //     }
-        //     else if ( (playerSelection.toLowerCase() == "rock" && computerSelection == "scissors") || (playerSelection.toLowerCase() == "paper" && computerSelection == "rock") || (playerSelection.toLowerCase() == "scissors" && computerSelection == "paper") ) {
-        //         return "you win";
-        //     }
-        //     else {
-        //         return "you lose";
-        //     }
-        // }
-
-        // // player inputs shape
-        // const playerSelection = "rock";
-
-        // // initialize array of results
-        // let results = [];
-        // const count = {};
-
-        // // function that plays 5 games out and records the results
-        // function game() {
-        //     for (let i = 0; i < 5; i++) {
-        //         console.log(playRound(playerSelection, computerPlay()));
-        //         results.push(playRound(playerSelection, computerPlay()));
-        //     }
-        // }
-        
-        // // play the 5 games
-        // game();
-
-        // // count how many wins/losses/ties
-        // for (let index = 0; index < results.length; index++) {
-        //     const element = results[index];
-        //     if (count[element]) {
-        //         count[element] += 1;
-        //     } else {
-        //         count[element] = 1;
-        //     }
-        // }
-
-
-
-
-        // v2
         // computer randomizes a shape
         function computerPlay() {
             let play = ["rock", "paper", "scissors"];
             return play[Math.floor(Math.random() * play.length)];
         }
 
+        // function plays one round
         function playRound(playerSelection, computerSelection) {
             if (playerSelection.toLowerCase() === computerSelection) {
                 return "tie";
@@ -77,25 +27,29 @@
         }
         }
 
+        // initialize win/loss counter
         wins = 0;
         loss = 0;
+
+        // play 5 rounds
         for (let i = 0; i < 5; i++) {
             let playerSelection = prompt("Please enter rock, paper, or scissors.");
             if (playerSelection) {
                 let playerOne = playerSelection.toLowerCase();
                 if (playerOne === "rock" || playerOne === "paper" || playerOne === "scissors") {
                     let computerOne = computerPlay();
-                    console.log(playerOne);
-                    console.log(computerOne);
-                    console.log(playRound(playerOne,computerOne));
-                    // tally wins
+
+                    // log result
+                    console.log("You chose:", playerOne);
+                    console.log("Computer chose:", computerOne);
+                    console.log("Result:", playRound(playerOne,computerOne));
                     
+                    // tally wins
                     if (playRound(playerOne,computerOne) == "you win") {
                         wins += 1;
                     } else if (playRound(playerOne,computerOne) == "you lose") {
                         loss += 1;
                     } 
-
                 } else {
                     alert("You didn't enter rock, paper, or scissors.");
                 }
@@ -104,6 +58,7 @@
             }
         }   
 
+        // log final result
         if (wins > loss) {
             console.log("You win this BO5!");
         } else if (wins == loss) {
@@ -111,9 +66,6 @@
         } else {
             console.log("You lose this BO5!");
         }
-
-
-
     </script>
 </body>
 </html>
